CHANGELOG

2011-04-25 1.4.0 Add memoize and :reload => true
2011-04-22 1.3.4 Add self to protect from local variable masking
2011-04-19 1.3.2 Bump to match sixarm_ruby_current_user gem
2011-04-18 1.3.0 Public release of version for Ruby 1.9.2 and Rails 3.0.5