@@ -1,1 +1,0 @@
-3a165c9b0728949848baabcc15ed6ec526273c465a863d01f57a2d75aa303535dff16149e604c97066a278e66e831849878225edeb92d645ea4a40a19e613a62  sixarm_ruby_current_user_id-1.4.0.gem
