@@ -1,5 +1,6 @@
 CHANGELOG
 
+2011-04-25 1.4.2 Add better memoize and fix bug in current_user_id text
 2011-04-25 1.4.0 Add memoize and :reload => true
 2011-04-22 1.3.4 Add self to protect from local variable masking
 2011-04-19 1.3.2 Bump to match sixarm_ruby_current_user gem
